# flint-tests-locust

./: .env.example  .gitignore  app.py  flint.toml  locustfile.py  pixi.toml  pyproject.toml  run.sh
reports/: report-locust.json
