[project]
authors = [{ name = "Soham Karandikar", email = "sohamk10@gmail.com" }]
description = "Add a short description here"
name = "locust"
version = "0.1.0"


[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.12.*"
fastapi = ">=0.115.11,<0.116"
uvicorn = ">=0.34.0,<0.35"

[tool.pixi.pypi-dependencies]
locust = ">=2.33.2, <3"
